@@ -236,6 +236,8 @@ class TaskRefinerBase (object):
         if 'useJobCloning' in taskParamMap:
             scValue = EventServiceUtils.getJobCloningValue(taskParamMap['useJobCloning'])
             self.setSplitRule(None,scValue,JediTaskSpec.splitRuleToken['useJobCloning'])
+        if 'failWhenGoalUnreached' in taskParamMap:
+            self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['failGoalUnreached'])
         # return
         return
     
