@@ -3,6 +3,7 @@ Release Notes
 * 8/3/2015
   * changed PP so that child tasks immediately go to finished w/o exhausted when all inputs are successful
   * added cloud locality check
+  * added failWhenGoalUnreached
 
 * 7/30/2015
   * fixed AtlasPJB to check inactive sites with nActivated>0
